# minimal-secure-protocol

./: .gitignore  README.md  plan.md  pyproject.toml  requirements.txt
mud/: telescope-mount.mud.json
scripts/: admin.py  generate_certs.py  setup_device.py
src/minimal_secure_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/telescope/: auth.py  client.py  protocol.py  server.py  tls_config.py
tests/: conftest.py  test_auth.py  test_protocol.py
